<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/corFundoLayouts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abana_me"
            android:textAlignment="center"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/btnReproduzirGravacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reproduzir"
            android:layout_marginTop="32sp"/>

        <Button
            android:id="@+id/btnFecharLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechar"
            android:layout_marginTop="32sp"/>

    </LinearLayout>


</RelativeLayout>